add-taikai-for-architectural-tests-and-jspecify-plugin-to-fail-at-compile-time-if-checks-fail